# local-agent-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: __init__.py  launcher.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  agentpacks.py  benchmarks.py  capabilities.py  config.py  db.py  downloads.py  hardware.py  main.py  mcp_client.py  model_catalog.py  provider_models.py  python_runtime.py  repositories.py  runtime_installer.py  scheduler.py  schemas.py  security.py  tools.py  workflows.py
backend/app/providers/: base.py  gemini.py  llamacpp.py  manager.py  ollama.py  openai_compat.py
backend/tests/: test_backend.py
docs/: ARCHITECTURE.md  USER_GUIDE.md
scripts/: audit_packaged_ui.ps1  audit_packaged_ui.py  build_backend.ps1  capture_packaged_ui.ps1  generate_icon.ps1  generate_sbom.ps1  package.ps1  smoke_packaged_backend.ps1  verify-build.mjs
src/main/: main.ts  preload.cts
src/renderer/: App.tsx  api.test.ts  api.ts  global.d.ts  hooks.ts  index.html  styles.css  types.ts
src/renderer/components/: Common.tsx  Layout.tsx  Logo.tsx  SetupWizard.test.ts  SetupWizard.tsx
src/renderer/pages/: AgentsPage.tsx  HomePage.tsx  ModelsPage.tsx  ResourcesPage.tsx  RunsPage.tsx  SettingsPage.tsx  (+1 more)
